packages/astro/e2e/fixtures/errors/src/pages/js-runtime-error.astro
---
import Error from '../components/JSRuntimeError';
---
<div>{Error()}</div>
